framework of abstract and intro

--- a/report/010abstract.tex
+++ b/report/010abstract.tex
@@ -1,10 +1,12 @@
-% \begin{abstract}
 \section{Abstract}
 
-Hello s
+Computing the real roots of univariate polynomial is one of fundamental tasks in
+numeric and computer algebra. Usual root-finding algorithms for computing the
+real roots of a polynomial may produce some real roots, but cannot generally
+certify having found all real roots.
 
-%For this project, we plan to evaluate the generalizability of existing anomaly detection methods by learning models from a set of BGP traffic data and evaluating them on different anomalous datasets.
+In this project, we implemented a basic real roots isolation program based on
+Budan's Theorem and Continued Fraction Method. Both methods are developed from 
+Descartes' rule of signs. Then we compare the running time of these two methods
+and get the conclusion that TODO.
 
-
-%it on one dataset and evaluating it on another dataset representing a different anomaly. 
-% \end{abstract}
