--- a/report/sample-acmsmall.tex
+++ b/report/sample-acmsmall.tex
@@ -102,7 +102,7 @@
 %% Of note is the shared affiliation of the first two authors, and the
 %% "authornote" and "authornotemark" commands
 %% used to denote shared contribution to the research.
-\author{Xinlong Yi(862188160)}
+\author{Xinlong Yi}
 \email{xyi007@ucr.edu}
 \affiliation{%
   \institution{\\Computer Science and Engineering Department, University of California Riverside}
@@ -175,10 +175,13 @@
 % \newpage
 
 \input{010abstract}
-\input{020problem}
-\input{030previous}
-\input{040data}
-% \input{050contributions}
+\input{020introduction}
+\input{030squarefree}
+\input{040budan}
+\input{050vincent}
+\input{060experiment}
+\input{070conclusion}
+
 
 %%
 %% The acknowledgments section is defined using the "acks" environment
