--- a/report/sample-acmsmall.tex
+++ b/report/sample-acmsmall.tex
@@ -94,7 +94,7 @@
 %%
 %% The "title" command has an optional parameter,
 %% allowing the author to define a "short title" to be used in page headers.
-\title{Real Roots Isolation of Polynomials}
+\title{Real-Root Isolation of Polynomials}
 
 %%
 %% The "author" command and its associated commands are used to define
@@ -176,11 +176,10 @@
 
 \input{010abstract}
 \input{020introduction}
-\input{030squarefree}
-\input{040budan}
-\input{050vincent}
-\input{060experiment}
-\input{070conclusion}
+\input{030literature-review}
+\input{040methodology}
+\input{050implementation}
+\input{060conclusion}
 
 
 %%
