--- a/report/references.bib
+++ b/report/references.bib
@@ -10,3 +10,20 @@
  volume = {23},
  year = {1980}
 }
+
+@inproceedings{Yuns,
+ author = {Yun, David Y.Y.},
+ title = {On Square-Free Decomposition Algorithms},
+ year = {1976},
+ isbn = {9781450377904},
+ publisher = {Association for Computing Machinery},
+ address = {New York, NY, USA},
+ url = {https://doi.org/10.1145/800205.806320},
+ doi = {10.1145/800205.806320},
+ abstract = {In this paper, we will give three different (including revamped versions of Horowitz's and Musser's) algorithms for computing the SQFR decomposition of polynomials in R[x]. Some algorithm analysis will be carried out to show the (asymptotic) superiority of the algorithm we propose (last of the three).},
+ booktitle = {Proceedings of the Third ACM Symposium on Symbolic and Algebraic Computation},
+ pages = {26–35},
+ numpages = {10},
+ location = {Yorktown Heights, New York, USA},
+ series = {SYMSAC '76}
+}
