--- a/report/040methodology.tex
+++ b/report/040methodology.tex
@@ -140,7 +140,7 @@ Let's first introduce some notation used in this algorithm. Let $M(x)$ represent
 Mobius Transformation, which map $x$ to $\frac{ax+b}{cx+d}$. So that the number
 of positive
 roots of $P(M(x))$ equals to the number of roots in interval $(\frac{b}{d},
-\frac{a}{c}]$. And $s = sign\_change(P)$ represents the sign changes along
+\frac{a}{c}]$ of $P$. And $s = sign\_change(P)$ represents the sign changes along
 coefficients of $P$.
 
 We using $\{a,b,c,d,p, s\}$ to represent a interval. Where, $ad-bc \neq 0$ and
