--- a/report/references.bib
+++ b/report/references.bib
@@ -27,3 +27,17 @@
  location = {Yorktown Heights, New York, USA},
  series = {SYMSAC '76}
 }
+
+@article{Approximate,
+ title = {Approximate GCD and its application to ill-conditioned equations},
+ journal = {Journal of Computational and Applied Mathematics},
+ volume = {38},
+ number = {1},
+ pages = {335-351},
+ year = {1991},
+ issn = {0377-0427},
+ doi = {https://doi.org/10.1016/0377-0427(91)90180-R},
+ url = {https://www.sciencedirect.com/science/article/pii/037704279190180R},
+ author = {Matu-Tarow Noda and Tateaki Sasaki},
+ keywords = {Symbolic computation, numeric computation, ill-conditioned, algebraic equation},
+}
