--- a/report/010abstract.tex
+++ b/report/010abstract.tex
@@ -7,6 +7,7 @@ certify having found all real roots.
 
 In this project, we implemented a basic real roots isolation program based on
 Budan's Theorem and Continued Fraction Method. Both methods are developed from 
-Descartes' rule of signs. Then we compare the running time of these two methods
-and get the conclusion that TODO.
+Descartes' rule of signs. Then I optimize the program with my best effort and 
+compare the running time of these two methods. Beside that, I also analyzed the
+conditions that make this program fail.
 
