--- a/report/020introduction.tex
+++ b/report/020introduction.tex
@@ -13,3 +13,16 @@ find any root, one cannot know if there is real roots or not. In order to get
 all real roots, real-root isolation is useful. Real-root isolation can generate
 intervals, which contain only one real root of the polynomial, so that no real
 root will be missed.
+
+In this project, I implemented two real-root isolation algorithms based on
+Budan's Theorem and Continued Fraction. After basic implemented, I optimized the
+program with better data structure and interval arithmetic. Then I tried to
+analysis the percision of this program. After that, I compare the running time
+of two algorithms and analysis in what condition these methods will fail. 
+
+The origanization of this project is as follows. In Section 2, I will review the
+development of methods that used in this project. In Section 3, I will
+introduced the methodologies that used to implemente the real-root isolation.
+Section 4 has the way that I implemented this project and what I tried to
+optimize it. And the analysis of error and percision will be described in
+Section 5.
