--- a/report/main.tex
+++ b/report/main.tex
@@ -179,7 +179,8 @@
 \input{030literature-review}
 \input{040methodology}
 \input{050implementation}
-\input{060conclusion}
+\input{060analysis}
+\input{070conclusion}
 
 
 %%
