--- a/report/main.tex
+++ b/report/main.tex
@@ -176,7 +176,7 @@
 
 \input{010abstract}
 \input{020introduction}
-\input{030literature-review}
+%\input{030literature-review}
 \input{040methodology}
 \input{050implementation}
 \input{060analysis}
