--- a/report/references.bib
+++ b/report/references.bib
@@ -41,3 +41,15 @@
  author = {Matu-Tarow Noda and Tateaki Sasaki},
  keywords = {Symbolic computation, numeric computation, ill-conditioned, algebraic equation},
 }
+
+@online{Budan,
+  title = {Budan's theorem},
+  url = {https://en.wikipedia.org/wiki/Budan%27s_theorem},
+  note = {Last edited: 2020-12-31}
+}
+
+@online{Lag,
+  title = {Lagrange's bounds},
+  url = {https://en.wikipedia.org/wiki/Geometrical_properties_of_polynomial_roots#cite_note-2},
+  note = {Last edited: 2021-3-9}
+}
