--- a/report/010abstract.tex
+++ b/report/010abstract.tex
@@ -1,13 +1,13 @@
 \section{Abstract}
 
-Computing the real roots of univariate polynomial is one of fundamental tasks in
-numeric and computer algebra. Usual root-finding algorithms for computing the
-real roots of a polynomial may produce some real roots, but cannot generally
-certify having found all real roots.
-
-In this project, we implemented a basic real roots isolation program based on
-Budan's Theorem and Continued Fraction Method. Both methods are developed from 
-Descartes' rule of signs. Then I optimize the program with my best effort and 
-compare the running time of these two methods. Beside that, I also analyzed the
-conditions that make this program fail.
-
+Finding real roots of polynomials is a fundamental problem in scientific
+computing. This project aims to implement a real-root isolation program based on
+Budan’s Theorem and Continued Fraction. Both methods are developed from
+Descartes’ rule of signs and work only on square-free polynomials. Therefore,
+square-free decomposition is the very first step to isolate the roots of
+polynomials. This project applies Yun’s algorithm to make the polynomials have
+no repeated roots. And in order to handle errors that come from floating point
+computation, interval arithmetic is introduced to replace exact numbers. Besides
+that, many methods are used to optimize the program and running time of these
+two algorithms are compared. This report also discusses how errors propagated
+through computation and how it affects the success of the program.
